--- a/src/style.css
+++ b/src/style.css
@@ -214,6 +214,7 @@ p {
 
 .success-bg{
     background-color: hsla(169, 82%, 27%,.2)!important;
+    border: 1px solid hsl(169, 82%, 27%)!important;
 }
 
 .error-message {
